Add locking mechanism to only allow 1 instance of app running