@@ -11,14 +11,10 @@ import main.database.DatabaseHandler;
 import main.util.Util;
 
 public class Main extends Application {
-//    -Djava.library.path=javafx\bin --module-path "library\javafx\lib" --add-modules=ALL-MODULE-PATH --add-modules javafx.controls,javafx.fxml
-//    java -jar --module-path C:\Users\walker\Documents\NetBeansProjects\QuanLiNhaTro\library\javafx\lib --add-modules=javafx.controls,javafx.fxml QuanLiNhaTro.jar
-//    java -jar -Djava.library.path=library\javafx\bin --module-path C:\Users\walker\Documents\NetBeansProjects\QuanLiNhaTro\library\javafx\lib --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.web --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
-//    -Djava.library.path=library\javafx\bin --module-path C:\Users\walker\Documents\NetBeansProjects\QuanLiNhaTro\library\javafx\lib --add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.web --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
-
-    // jar file commandline
-//    java -jar --module-path C:\Users\walker\Documents\NetBeansProjects\QuanLiNhaTro\library\javafx\lib --add-modules=javafx.controls,javafx.fxml QuanLiNhaTro.jar
     public static void main(String[] args) {
+        if (!Util.lockInstance("~$temp.lck")) {
+            System.exit(0);
+        }
         launch(args);
     }
 
@@ -44,5 +40,4 @@ public class Main extends Application {
 
         DatabaseHandler.getInstance();
     }
-
 }
